--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@repo/typescript-config/react-library.json",
-  "include": ["."],
+  "include": [".", "./styled-system"],
   "exclude": ["dist", "build", "node_modules"]
 }
